Fix for right-pointing triangle on iPhones.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -70,6 +70,9 @@
 .kmw-keyboard-gff_amharic #amharic-etens-extra-T_MORE  /* ▶ */
   { background:  #ebece6 ; color: black ; }
 
+.phone.ios div.kmw-key.kmw-key-special[id$='extra-T_MORE'] span.kmw-key-text
+    {font-family: "Arial"; }  /* ▶ */
+
 /* amharic-extra layer: ge'ez numerals */
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE'],
 .phone div.kmw-key.kmw-key-default[id$='U_1369'], .tablet div.kmw-key.kmw-key-default[id$='U_1369'], /* ፩ */
@@ -142,7 +145,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1350'], .tablet div.kmw-key.kmw-key-default[id$='U_1350'],  /* ፐ */
 .phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   /* አ */
 .phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_2\+shift,
-           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1360  /* @, ፠ */
+.phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1360  /* @, ፠ */
   { background: #e2f0cb ; color: black; } /*#baed91 */
 
 /* default layer ካዕብ */
@@ -186,7 +189,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1351'], .tablet div.kmw-key.kmw-key-default[id$='U_1351'],  /* ፑ */
 .phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   /* ኡ */
 .phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_4\+shift,
-           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1365  /* $, ፥ */
+.phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1365  /* $, ፥ */
   { background: #ffffb5 ; color: black; } /* #faf884 */ 
 
 /* default layer ሣልስ */
@@ -407,7 +410,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
 .phone div.kmw-key.kmw-key-default[id$='T_WWA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWA']
  /* { background:  #e1cec9  ; color: black; } */
-    {
+  {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
   }
